<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <parent>
  <groupId>io.webfolder</groupId>
  <artifactId>cormorant</artifactId>
  <version>1.0.0</version>
 </parent>
 <artifactId>cormorant-server</artifactId>
 <licenses>
  <license>
   <name>GNU Affero General Public License</name>
   <url>http://www.gnu.org/licenses</url>
  </license>
 </licenses>
 <description>Object Storage Server</description>
 <inceptionYear>2017</inceptionYear>
 <organization>
  <name>WebFolder OÜ</name>
  <url>https://webfolder.io</url>
 </organization>
 <developers>
  <developer>
   <name>WebFolder OÜ</name>
   <email>support@webfolder.io</email>
   <timezone>GMT+2</timezone>
   <organization>WebFolder OÜ</organization>
   <url>https://webfolder.io</url>
   <organizationUrl>https://webfolder.io</organizationUrl>
  </developer>
 </developers>
 <build>
  <plugins>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.7.0</version>
    <configuration>
     <source>1.8</source>
     <target>1.8</target>
     <compilerArgs>
      <arg>-parameters</arg>
     </compilerArgs>
    </configuration>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-jar-plugin</artifactId>
    <version>3.0.2</version>
    <configuration>
     <archive>
      <manifestEntries>
       <Implementation-Version>${project.version}</Implementation-Version>
       <Implementation-Build>${project.version}</Implementation-Build>
       <Built-By>WebFolder OÜ</Built-By>
      </manifestEntries>
     </archive>
    </configuration>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <version>3.0.1</version>
    <executions>
     <execution>
      <id>attach-sources</id>
      <goals>
       <goal>jar-no-fork</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-shade-plugin</artifactId>
    <version>3.0.0</version>
    <executions>
     <execution>
      <phase>package</phase>
      <goals>
       <goal>shade</goal>
      </goals>
     </execution>
    </executions>
    <configuration>
     <createSourcesJar>true</createSourcesJar>
     <transformers>
      <transformer
       implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
      <transformer
       implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
       <mainClass>io.webfolder.server.EmbeddedServer</mainClass>
       <manifestEntries>
        <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
        <Bundle-Name>${project.name}</Bundle-Name>
        <Bundle-Description>cormorant - Object Storage Server</Bundle-Description>
        <Bundle-Version>${project.version}</Bundle-Version>
        <Built-By>WebFolder OÜ</Built-By>
       </manifestEntries>
      </transformer>
     </transformers>
     <filters>
      <filter>
       <artifact>*:*</artifact>
       <excludes>
        <exclude>META-INF/*.SF</exclude>
        <exclude>META-INF/*.DSA</exclude>
        <exclude>META-INF/*.RSA</exclude>
        <exclude>THIRD-PARTY.txt</exclude>
        <exclude>META-INF/LICENSE</exclude>
        <exclude>META-INF/LICENSE.txt</exclude>
        <exclude>META-INF/README</exclude>
        <exclude>META-INF/pom.xml</exclude>
        <exclude>META-INF/NOTICE.txt</exclude>
        <exclude>META-INF/NOTICE</exclude>
        <exclude>META-INF/DEPENDENCIES</exclude>
        <exclude>META-INF/maven</exclude>
        <exclude>META-INF/maven/**</exclude>
       </excludes>
      </filter>
     </filters>
    </configuration>
   </plugin>
   <plugin>
    <groupId>com.mycila</groupId>
    <artifactId>license-maven-plugin</artifactId>
    <version>3.0</version>
    <configuration>
     <header>com/mycila/maven/plugin/license/templates/AGPL-3.txt</header>
     <properties>
      <owner>WebFolder OÜ</owner>
      <email>support@webfolder.io</email>
     </properties>
     <excludes>
      <exclude>pom.xml</exclude>
      <exclude>src/main/java/io/webfolder/cormorant/internal/ext/**</exclude>
      <exclude>src/test/resources/**</exclude>
      <exclude>src/main/resources/**</exclude>
      <exclude>mydir/**</exclude>
      <exclude>mymetadata/**</exclude>
     </excludes>
    </configuration>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <version>3.0.1</version>
    <executions>
     <execution>
      <id>generate-sources-for-shade-plugin</id>
      <phase>package</phase>
      <goals>
       <goal>jar-no-fork</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.10.4</version>
    <executions>
     <execution>
      <id>attach-javadocs</id>
      <goals>
       <goal>jar</goal>
      </goals>
      <configuration>
       <failOnError>false</failOnError>
       <additionalparam>-Xdoclint:none</additionalparam>
      </configuration>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>2.20</version>
    <configuration>
     <reuseForks>false</reuseForks>
     <excludes>
      <exclude>**/TestServer*</exclude>
     </excludes>
    </configuration>
   </plugin>
   <plugin>
    <groupId>org.eluder.coveralls</groupId>
    <artifactId>coveralls-maven-plugin</artifactId>
    <version>4.3.0</version>
   </plugin>
  </plugins>
 </build>
 <dependencies>
  <dependency>
   <groupId>io.webfolder</groupId>
   <artifactId>cormorant-core</artifactId>
   <version>1.0.0</version>
  </dependency>
  <dependency>
   <groupId>org.sharegov</groupId>
   <artifactId>mjson</artifactId>
   <version>1.4.1</version>
   <exclusions>
    <exclusion>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
  <dependency>
   <groupId>org.slf4j</groupId>
   <artifactId>slf4j-api</artifactId>
   <version>1.7.25</version>
  </dependency>
  <dependency>
   <groupId>net.jodah</groupId>
   <artifactId>expiringmap</artifactId>
   <version>0.5.8</version>
  </dependency>
  <dependency>
   <groupId>org.jvnet.winp</groupId>
   <artifactId>winp</artifactId>
   <version>1.25</version>
  </dependency>
  <dependency>
   <groupId>javax.ws.rs</groupId>
   <artifactId>javax.ws.rs-api</artifactId>
   <version>2.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.xerial</groupId>
   <artifactId>sqlite-jdbc</artifactId>
   <version>3.21.0</version>
  </dependency>
  <dependency>
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-collections4</artifactId>
   <version>4.1</version>
  </dependency>
  <dependency>
   <groupId>org.jboss.spec.javax.annotation</groupId>
   <artifactId>jboss-annotations-api_1.2_spec</artifactId>
   <version>1.0.0.Final</version>
  </dependency>
  <dependency>
   <groupId>io.undertow</groupId>
   <artifactId>undertow-servlet</artifactId>
   <version>1.4.21.Final</version>
  </dependency>
  <dependency>
   <groupId>io.undertow</groupId>
   <artifactId>undertow-core</artifactId>
   <version>1.4.21.Final</version>
  </dependency>
  <dependency>
   <groupId>org.mindrot</groupId>
   <artifactId>jbcrypt</artifactId>
   <version>0.4</version>
  </dependency>
  <dependency>
   <groupId>org.jboss.xnio</groupId>
   <artifactId>xnio-nio</artifactId>
   <version>3.3.8.Final</version>
  </dependency>
  <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>2.0.3</version>
  </dependency>
  <dependency>
   <groupId>org.jboss.spec.javax.servlet</groupId>
   <artifactId>jboss-servlet-api_3.1_spec</artifactId>
   <version>1.0.0.Final</version>
  </dependency>
  <dependency>
   <groupId>org.jboss.resteasy</groupId>
   <artifactId>resteasy-jaxrs</artifactId>
   <version>3.1.4.Final</version>
   <exclusions>
    <exclusion>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpclient</artifactId>
    </exclusion>
    <exclusion>
     <groupId>javax.activation</groupId>
     <artifactId>activation</artifactId>
    </exclusion>
    <exclusion>
     <groupId>org.jboss.resteasy</groupId>
     <artifactId>resteasy-jaxrs-services</artifactId>
    </exclusion>
    <exclusion>
     <groupId>org.jboss.resteasy</groupId>
     <artifactId>resteasy-client</artifactId>
    </exclusion>
    <exclusion>
     <groupId>org.jboss.spec.javax.annotation</groupId>
     <artifactId>jboss-annotations-api_1.2_spec</artifactId>
    </exclusion>
    <exclusion>
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
  <dependency>
   <groupId>org.tinylog</groupId>
   <artifactId>slf4j-binding</artifactId>
   <version>1.3.1</version>
   <exclusions>
    <exclusion>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
 </dependencies>
 <properties>
  <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 </properties>
</project>